--- a/website/templates/add_record.html
+++ b/website/templates/add_record.html
@@ -1,6 +1,15 @@
 {%extends 'base.html' %}
 {% block content %}
 
-<h1>Add record</h1>
-
+<div class="col-md-6 offset-md-3">
+    <h1>Add record</h1>
+    <br />
+    <form method="POST" action="{% url 'add_record' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <br/>
+        <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
+        <button type="submit" class="btn btn-success">Add</button>
+    </form>
+</div>
 {%endblock%}
