--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -34,5 +34,6 @@
     <br/>
     <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
     <a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger">Delete</a>
+    <a href="{% url 'update_record' customer_record.id %}" class="btn btn-success">Update</a>
 
 {%endblock%}
